Another Major Update after Today's Demo
- Basic "Engine" functionality: the "Engine2" class handles
  object tracking, co-ordinates the Camera/Filters/ClusterFinders,
  etc.
- Split (almost) everything into source and header files.
- Changed a lot of build settings (CMakeLists.txt)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,16 @@
 ## Purpose     :  CMake input file.
 
 # Tell CMake to compile these files into a library called "Utils"
-add_library(Utils Shell.cpp stringmanip.cpp Logger.cpp Engine.cpp)
+find_package(Qt5Widgets REQUIRED)
+find_package(PCL 1.2 REQUIRED)
+include_directories({${PCL_INCLUDE_DIRS})
+include_directories(${Qt5Widgets_INCLUDE_DIRS})
+add_library(Utils 
+   RobotExt.cpp Shell.cpp stringmanip.cpp Logger.cpp QLogger.cpp Engine.cpp PlaneFilter.cpp TwoPlaneFilter.cpp Camera.cpp 
+   CameraFile.cpp PCLUtils.cpp ClusterFinder.cpp plane_clipper_3D.cpp pcl_visualizer_instantiations.cpp)
+
+qt5_use_modules(Utils Widgets)
+
+
+
 
