--- a/vision/pcl_example/CMakeLists.txt
+++ b/vision/pcl_example/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
  
 project(openni_grabber)
  
+find_package(VTK REQUIRED)
 find_package(PCL 1.2 REQUIRED)
 aux_source_directory(. SRC_LIST)
  
@@ -15,4 +16,4 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 # set(CMAKE_C_FLAGS "-O2")
  
 add_executable (openni_grabber openni_viewer_simple.cpp)
-target_link_libraries (openni_grabber ${PCL_LIBRARIES})
+target_link_libraries (openni_grabber ${PCL_LIBRARIES} ${VTK_LIBRARIES})
