Adding the latest changes to the Engine2 class.
...and all of the pre-existing classes that
got updated as well.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,8 @@ include_directories({${PCL_INCLUDE_DIRS})
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
 add_library(Utils 
    RobotExt.cpp Shell.cpp stringmanip.cpp Logger.cpp QLogger.cpp Engine.cpp PlaneFilter.cpp TwoPlaneFilter.cpp Camera.cpp 
-   CameraFile.cpp PCLUtils.cpp ClusterFinder.cpp plane_clipper_3D.cpp pcl_visualizer_instantiations.cpp)
+   CameraFile.cpp PCLUtils.cpp ClusterFinder.cpp WSObject.cpp plane_clipper_3D.cpp pcl_visualizer_instantiations.cpp
+   Calibration.cpp Engine2.cpp)
 
 qt5_use_modules(Utils Widgets)
 
